fix(team) fixes layout on mobile

--- a/_sass/components/team.scss
+++ b/_sass/components/team.scss
@@ -4,7 +4,6 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  margin: -1rem;
   margin-top: 2rem;
   margin-bottom: 2rem;
 
@@ -15,6 +14,14 @@
       display: flex;
       flex-direction: row;
       align-items: center;
+    }
+
+    @media screen and (max-width: $screen-small) {
+     
+      #{$b}__member-container {
+        flex-direction: column;
+      }
+
     }
   }
 
